--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         .container {
             position: relative;
             height: 100vh;
-            width: 800px;
+            width: 100%;
+            max-width: 800px;
             display: flex;
             justify-content: center;
             align-items: center;
